Fix H1.1 tests